# MyRAG1

./: .env  .gitignore  AIChat.py  Populate RAG DB.py  Query Data.py  QueryRAG_Data.py  README.md  TestSuiteQuestions.txt  get_embedding_function.py  get_models.py  main.py  pull_ollama_models.cmd  pyproject.toml
chroma/7d231131-68c4-4f7a-add6-c4da7def1110/: index_metadata.pickle
